--- a/website/frontpage.htm
+++ b/website/frontpage.htm
@@ -13,8 +13,8 @@
                       <ul id="unorderedList"><li><a href="page_1.htm" title="Experience"><b>Experience</b></a></li><li><a href="page_2.htm" 
 					  title="Projects"><b>Projects</b></a></li><li><a href="page_3.htm" title="My contacts"><b>Contact me
 					  </b></ul>
-                      <p><a href="page_3.htm" title="my contacts"><img src="../friends.jpg" alt="me" width="110" 
-					  height="160" class="flowRight"></a><img src="_img/report.jpg" width="300" height="150" 
+                      <p><a href="page_3_1.htm" title="my contacts"><img src="_img/friends.jpg" alt="me" width="110" 
+					  height="160" class="flowRight" id = "mainImage"></a><img src="_img/report.jpg" width="300" height="150" 
 					  alt="my work report" title="report" class="flowRight">This is a test text dfgjkfgjh sfkgjfkgjshf 
 					  sdfgkjkfjgh dsfgjdkfgjh dhrgksdfjghksdgj ksdghkdsjfhgk ksdjfgkdjfghkf ksdghksdjfhgkdg kdfjgkdjfhgkd
 					  dsfkgjhkdfjgh ksdjghkdghksd dskfjghksdfjgh ksdfgjhkfgjh dskfgjhksdj dfgkjdfhg kdjghk.
@@ -61,5 +61,6 @@
                 <p><a href="#top" title="top of the page">Back to the top</a></div>
 				<!--<script src="myscript.js" type="text/javascript"></script>-->
 				<script src="myscript2.js" type="text/javascript"></script>
+				<script src="acerscript.js" type="text/javascript"></script>
             </body>
     </html>
