playing with onload

--- a/website/frontpage.htm
+++ b/website/frontpage.htm
@@ -6,6 +6,7 @@
                     <meta name="description" content="Professional profile">
                     <title>Profile</title>
                     <link href="styles.css" rel="stylesheet" type="text/css">
+					<script src="acerscript.js" type="text/javascript"></script>
             </head>
             <body>
                 <div id="header"><h1 id="top">Brief Profile</h1><h2><em>Test</em></h2></div>
@@ -13,7 +14,7 @@
                       <ul id="unorderedList"><li><a href="page_1.htm" title="Experience"><b>Experience</b></a></li><li><a href="page_2.htm" 
 					  title="Projects"><b>Projects</b></a></li><li><a href="page_3.htm" title="My contacts"><b>Contact me
 					  </b></ul>
-                      <p><a href="page_3_1.htm" title="my contacts"><img src="_img/friends.jpg" alt="me" width="110" 
+                      <p><a href="page_3_1.html" title="my contacts"><img src="_img/friends.jpg" alt="me" width="110" 
 					  height="160" class="flowRight" id = "mainImage"></a><img src="_img/report.jpg" width="300" height="150" 
 					  alt="my work report" title="report" class="flowRight">This is a test text dfgjkfgjh sfkgjfkgjshf 
 					  sdfgkjkfjgh dsfgjdkfgjh dhrgksdfjghksdgj ksdghkdsjfhgk ksdjfgkdjfghkf ksdghksdjfhgkdg kdfjgkdjfhgkd
@@ -61,6 +62,6 @@
                 <p><a href="#top" title="top of the page">Back to the top</a></div>
 				<!--<script src="myscript.js" type="text/javascript"></script>-->
 				<script src="myscript2.js" type="text/javascript"></script>
-				<script src="acerscript.js" type="text/javascript"></script>
+				
             </body>
     </html>
