--- a/website/page_4.html
+++ b/website/page_4.html
@@ -5,12 +5,14 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-	<title>page_4</title>
+	<title>thanks</title>
 	
 </head>
 
 <body>
-
+	<p>
+	Thanks for getting in touch!
+	</p>
 
 </body>
 </html>
