my first js webapp is finished

--- a/dynamite/landingpage.html
+++ b/dynamite/landingpage.html
@@ -13,11 +13,11 @@
 
 <body>
 	<div id="header">
-	<h1>Switch off the right switch!</h1>
+	<h1>Disarm the bomb!</h1>
 	</div>
 	<div id="Contents">
 	<h2 id="Message">
-	Click one of the switches below
+	One of the switches below is triggering an explosion, two others don't -- click one
 	</h2>
 	<p>Seconds left:<b>
 	<span id ="timer">
@@ -39,6 +39,12 @@
 	Confirm!
 	</b></p>
 	</div>
+	<button type="button" id = "newgame">New game</button> 
+	<p>
+	Game number: <span id = "infofield_1">0</span>
+	Games won: <span id = "infofield_2">0</span>
+	Games lost: <span id = "infofield_3">0</span>
+	</p>
 	</div>
 	<div id="footer">
 	<br><p><b><i>Andrey Kolokolnikov</i></b><br>andkolok@gmail.com</p>
