--- a/dynamite/landingpage.html
+++ b/dynamite/landingpage.html
@@ -34,12 +34,13 @@
 	<img src="_img/switch_on.jpg" alt="switch_2" width="150" height="115" class = "" id = "switch_2">
 	<img src="_img/switch_on.jpg" alt="switch_3" width="150" height="115" class = "" id = "switch_3">
 	</p>
-	<div >
-	<p id = "disarm"><b>
-	Confirm!
-	</b></p>
-	</div>
+	<div>
+	<button type="button" id = "confirm"><b>Confirm!</b></button>
+	<p>
+	<br>
+	<button type="button" id = "disarm">Disarm</button>
 	<button type="button" id = "newgame">New game</button> 
+	</p>
 	<p>
 	Game number: <span id = "infofield_1">0</span>
 	Games won: <span id = "infofield_2">0</span>
