--- a/dynamite/landingpage.html
+++ b/dynamite/landingpage.html
@@ -7,7 +7,7 @@
 
 	<title>Dynamite</title>
 	
-    <link href="dynostyles.css" rel="stylesheet" type="text/css">
+    <link href="dynastyles.css" rel="stylesheet" type="text/css">
 					
 </head>
 
@@ -50,6 +50,6 @@
 	<div id="footer">
 	<br><p><b><i>Andrey Kolokolnikov</i></b><br>andkolok@gmail.com</p>
     </div>
-	<script src="dynoscript.js" type="text/javascript"></script>
+	<script src="dynascript.js" type="text/javascript"></script>
 </body>
 </html>
