--- a/website/page_6.html
+++ b/website/page_6.html
@@ -51,6 +51,22 @@
 							<textarea name="comments" rows="15" cols="50" tabindex="170"></textarea>
 							</p>
 						</fieldset>
+						<fieldset id="generalInfo">
+							<p>Check here if you want to get spam from us: <input type="checkbox"
+							name="spam" id="spam">
+							</p>
+							<div id="tourSelection">
+								<p>
+								<input type="checkbox" name="messages" id="messages">
+								<label for="messages">Woo-hoo, more spam!</label>
+								</p>
+								<p>
+								<input type="checkbox" name="calls" id="calls">
+								<label for="calls">I need phone pranks!</label>
+								</p>
+								
+							</div>
+						</fieldset>
 						<fieldset id="selectors">
 							<legend><strong>General info</strong></legend>
 							<p>More info on the following</p>
@@ -75,6 +91,7 @@
 							</p>
 							</div>
 						</fieldset>
+						
 						</form>
 	</div>
 	<script src="infoscript.js" type="text/javascript"></script>
