--- a/website/frontpage.htm
+++ b/website/frontpage.htm
@@ -6,7 +6,7 @@
                     <meta name="description" content="Professional profile">
                     <title>Profile</title>
                     <link href="styles.css" rel="stylesheet" type="text/css">
-					<script src="acerscript.js" type="text/javascript"></script>
+					<script src="jquery-1.10.2.min.js"></script>
             </head>
             <body>
                 <div id="header"><h1 id="top">Brief Profile</h1><h2 id="mainMessage"><em>Test</em></h2></div>
@@ -14,7 +14,7 @@
                       <ul id="unorderedList"><li><a href="page_1.htm" title="Experience"><b>Experience</b></a></li><li><a href="page_2.htm" 
 					  title="Projects"><b>Projects</b></a></li><li><a href="page_3.htm" title="My contacts"><b>Contact me
 					  </b></a></ul>
-                      <p><!--<a href="page_3_1.html" title="my contacts">--><img src="_img/friends.jpg" alt="watercolor" width="210" 
+                      <p><!--<a href="page_3_1.html" title="my contacts">--><img src="_img/friends.jpg" alt="watercolor" width="250" 
 					  height="260" class="flowRight" id = "mainImage"><img src="_img/report.jpg" id="reportImage"
 					  width="300" height="150" 
 					  alt="my work report" title="report" class="flowRight">
@@ -98,9 +98,12 @@
 				</div>
                 <div id="footer"><br><p><b><i>Contacts:</i></b><br>+358 468 123 377<br>aakolok@gmail.com</p>
                 <p><a href="#top" title="top of the page">Back to the top</a></div>
-				<!--<script src="myscript.js" type="text/javascript"></script>-->
+				<!--<script src="myscript.js" type="text/javascript"></script>
+				<script src="timers.js" type="text/javascript"></script>-->
 				<script src="myscript2.js" type="text/javascript"></script>
-				<script src="timers.js" type="text/javascript"></script>
+				
+				<script src="scriptwjquery.js" type="text/javascript"></script>
+				<script src="acerscript.js" type="text/javascript"></script>
 				
             </body>
     </html>
