--- a/website/page_6.html
+++ b/website/page_6.html
@@ -7,13 +7,14 @@
 	<title>Personal Information</title>
 	<meta name="author" content="Andrey" />
 	<link href="styles.css" rel="stylesheet" type="text/css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<!-- Date: 2013-10-19 -->
 </head>
 <body>
 	<div id="mainContent6">
 		<form id="frmInfo" name="frmInfo" method="post" action="page_4.html">
 						<fieldset id="persInfo">
-							<legend><strong>Personal Information</strong></legend>
+							<legend id="infopers"><strong>Personal Information</strong></legend>
 							<p> Please tell us about yourself </p>
 							<p>
 							<label for="name">Name:</label>
@@ -95,6 +96,7 @@
 						</form>
 	</div>
 	<script src="infoscript.js" type="text/javascript"></script>
+	<script src="worker.js" type="text/javascript"></script>
 </body>
 </html>
 
