--- a/website/frontpage.htm
+++ b/website/frontpage.htm
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <!-- comment -->
-    <html lang="en">
+    <html lang="en" class="no-js">
             <head>
 				<meta charset="utf-8">
                     <meta name="description" content="Professional profile">
                     <title>Profile</title>
                     <link href="styles.css" rel="stylesheet" type="text/css">
-					<script src="jquery-1.10.2.min.js"></script>
+					<script src="modernizr-2.6.2.js"></script>
+					<!--<script src="jquery-1.10.2.min.js"></script>-->
+					<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
             </head>
             <body>
                 <div id="header"><h1 id="top">Brief Profile</h1><h2 id="mainMessage"><em>Test</em></h2></div>
@@ -96,6 +98,15 @@
 				<div id="trivia" class="callOut">
 				<!-- the new js code is applied here-->
 				</div>
+				<video id="myVideo" controls preload="auto">
+				    <source src="../../../Python_3.mp4" type="video/mp4"/>
+					<!-- if video is not supported -->
+					<p>Your browser does not support HTML5 video</p>
+				</video>
+				
+				<p><br>
+				<a href="page_6.html" onclick="testClick(); return false;">Clicks the first heading &ldquo;Lorem&rdquo;</a>
+				</p>
                 <div id="footer"><br><p><b><i>Contacts:</i></b><br>+358 468 123 377<br>aakolok@gmail.com</p>
                 <p><a href="#top" title="top of the page">Back to the top</a></div>
 				<!--<script src="myscript.js" type="text/javascript"></script>
