--- a/website/page_4.html
+++ b/website/page_4.html
@@ -5,14 +5,32 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-	<title>thanks</title>
-	
+	<title>Thanks and Countdown</title>
+	<style type="text/css">
+	body {
+	    font-family: sans-serif;
+		color: #333;
+	}
+	#container {
+	    width: 400px;
+		margin: auto;
+	}
+	h1 { font-size: 5em; }
+	</style>
 </head>
 
 <body>
 	<p>
 	Thanks for getting in touch!
 	</p>
+	<div id="container">
+	    <div id="inputArea">
+		</div>
+		
+		<h1 id="time">0:00</h1>
+	</div>
+	
 	<script src="myscript.js" type="text/javascript"></script>
+	<script src="countdown.js" type="text/javascript"></script>
 </body>
 </html>
