--- a/website/page_4.html
+++ b/website/page_4.html
@@ -17,6 +17,9 @@
 	}
 	h1 { font-size: 5em; }
 	</style>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+	
 </head>
 
 <body>
@@ -29,7 +32,52 @@
 		
 		<h1 id="time">0:00</h1>
 	</div>
+	<div id="accordion">
+	<h3 id="one"><a href="#">Lorem</a></h3>
+					  <div>
+					  <p>&ldquo;Nam placerat&rdquo; tortor sit amet massa 
+					  dictum, nec aliquam enim egestas. Donec aliquet nulla purus, id tincidunt est vulputate eget. 
+					  Phasellus id ultricies lorem. In lacinia egestas adipiscing. Aenean volutpat lectus a neque 
+					  blandit tempor. Donec non tellus venenatis, lacinia felis vel, feugiat neque. Curabitur ac 
+					  commodo tellus.<br>
+					  In sit amet ante id nunc condimentum accumsan sit amet sit amet felis. Aliquam mattis 
+					  neque quis ultricies rutrum. In iaculis eros eu sem adipiscing elementum. Nam ac ullamcorper 
+					  tellus. In eu mattis ante. Aenean tempor erat dolor, eu condimentum nibh aliquam ut.
+					  Nunc porttitor auctor vehicula. </p>
+					  </div>
+                      <h3 id="two"><a href="#">Sit Amet</a></h3>
+					  <div>
+					  <p>&ldquo;Lorem ipsum&rdquo; dolor sit amet, 
+					  consectetur adipiscing elit. Curabitur facilisis risus et 
+					  porta ultrices. Suspendisse quis arcu sodales, dignissim risus eget, consequat neque. 
+					  Ut consectetur massa ut massa condimentum, vitae fermentum nulla imperdiet. Duis gravida 
+					  molestie sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere 
+					  cubilia Curae; Aliquam erat volutpat. Pellentesque habitant morbi tristique senectus et 
+					  netus et malesuada fames ac turpis egestas.
+					  </p>
+					  </div>
+                      <h3 id="three"><a href="#">Ipsum <em>Dolor</em></a></h3>
+					  <div>
+					  <p> &ldquo;Phasellus&rdquo; mollis hendrerit 
+					  lectus, quis vulputate neque viverra sed. Donec tincidunt posuere risus, nec consequat 
+					  lorem vulputate ac. Praesent ut suscipit 
+					   odio. Integer vel accumsan diam. Morbi pulvinar risus laoreet, mollis orci quis, 
+					   rhoncus arcu. Donec suscipit commodo eleifend. Duis mollis euismod mauris sed 
+					   malesuada. In &ldquo;malesuada&rdquo; , arcu non consectetur dapibus, ligula risus condimentum 
+					   erat, nec cursus sem quam eget massa.<br>
+					   Cras felis quam, semper vitae tellus sed, feugiat gravida nulla. Nam vel sollicitudin 
+					   risus. Integer dignissim condimentum iaculis. Nam scelerisque auctor fringilla. 
+					   Duis non orci dui. &ldquo;Etiam&rdquo; neque metus, sodales pharetra hendrerit non, facilisis 
+					   tempus velit. Maecenas tincidunt nec eros at pulvinar. Proin porttitor, urna at varius 
+					   tempus, purus leo viverra risus, id facilisis nibh eros eu neque. Maecenas nisi orci, 
+					   hendrerit at pellentesque nec, fermentum eu sapien. Donec et risus eget magna blandit 
+					   pharetra. Sed commodo augue a eros luctus, eget tempus lorem interdum. </p>
+					   </div>
+	</div>
 	
+	
+	<!--<script src="accordeon.js" type="text/javascript"></script> included into countdown.js 
+	due to single window.onload-->
 	<script src="myscript.js" type="text/javascript"></script>
 	<script src="countdown.js" type="text/javascript"></script>
 </body>
