--- a/website/page_6.html
+++ b/website/page_6.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Personal Information</title>
 	<meta name="author" content="Andrey" />
-	<link href="styles.css" rel="stylesheet" type="text/css">
+	<link id="myCSS" href="styles.css" rel="stylesheet" type="text/css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<!-- Date: 2013-10-19 -->
 </head>
@@ -97,6 +97,7 @@
 	</div>
 	<script src="infoscript.js" type="text/javascript"></script>
 	<script src="worker.js" type="text/javascript"></script>
+	<script src="resize_display.js" type="text/javascript"></script>
 </body>
 </html>
 
