--- a/dynamite/index.html
+++ b/dynamite/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-	<title>Dynamite</title>
+	<title>Dynomite</title>
 	
     <link href="dynastyles.css" rel="stylesheet" type="text/css">
 					
@@ -25,7 +25,7 @@
 	</span></b>
 	</p>
 	<p>
-	<img src="_img/Dynamite_Brown.jpg" alt="dynomite" width="345" height="200" class="center" id = "dynomite">
+	<img src="_img/dynamite_brown.jpg" alt="dynomite" width="345" height="200" class="center" id = "dynomite">
 	</p>
 	</div>
 	<div id="switches">
