--- a/jQ_codeschool/interactiveDOM.html
+++ b/jQ_codeschool/interactiveDOM.html
@@ -3,6 +3,7 @@
     <head>
     	<title>To Do</title>
         <link rel="stylesheet" type="text/css" href="interactiveDOM.css"/>
+        <script type="text/javascript" src="../website/jquery-1.10.2.min.js"></script>
         <script type="text/javascript" src="interactiveDOM.js"></script>
 	</head>
 	<body>
